# polars-wasm-mwe

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  server.py  worker.js
rust-wasm/: Cargo.toml  rust-toolchain
rust-wasm/.cargo/: config.toml
rust-wasm/pkg/: package.json  rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm.d.ts
rust-wasm/src/: lib.rs  sklearn_example.py
rust-wasm/tests/: wasm.rs
