[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# logging and error messages
log = "*"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# js <-> rust bindings
wasm-bindgen = { version = "0.2" }
js-sys = "*"

# the rayon utils
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
ndarray = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

# our custom polars fork that works in wasm
[dependencies.polars]
features = [
  "dtype-full",
  # "list",
  "mode",
  "csv-file",
  "lazy",
  "strings",
  "temporal",
  "rows",
  "cum_agg",
  "rolling_window",
  "round_series",
  "arange",
  "diagonal_concat",
  "ndarray"
]
default-features = false
git =  "https://github.com/gitkwr/polars"

[profile.release]
debug = true

# when enabled, the wasm build takes forever so we disable it
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false